<resources>
    <string name="app_name">DompetFT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="available_promos">Available Promos</string>
    <string name="my_promo">My Promo</string>
    <string name="potongan_sebesar_rp">Potongan sebesar Rp</string>
    <string name="pay_for_canteen">Pay for Canteen</string>
    <string name="check_here_for_promos">Check here for promos!</string>
    <string name="username_log">Username</string>
    <string name="password_log">Password</string>
    <string name="login">LOGIN</string>
    <string name="log">Log</string>
    <string name="in">In</string>
    <string name="first_time_user">First time user?</string>
    <string name="sign_up_log">Sign Up</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="nik_nim">NIK / NIM</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or111">OR</string>
    <string name="login_satulagi">LOGIN</string>
    <string name="full_name">Full name</string>
    <string name="sign44">Sign</string>
    <string name="up">up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="current_balance">Current balance</string>
    <string name="send">Send</string>
    <string name="top_up3">Top Up</string>
    <string name="claim_and_redeem_the_voucher_for_purchasing_within_the_app_click_for_more">Claim and redeem the voucher for purchasing within the app! Click for more.</string>
    <string name="tion">tion</string>
    <string name="promo">Promo</string>
    <string name="now_you_can_transfer_your_balance_to_a_friend_within_the_app_click_for_more">Now you can transfer your balance to a friend within the app! Click for more</string>
    <string name="balance">Balance</string>
    <string name="transfer">Transfer</string>
    <string name="for_an_ease_of_transfer_balance_you_can_now_scan_the_qr_code_tap_to_see_your_qr_code">For an ease of transfer balance!</string>
    <string name="qr">QR</string>
    <string name="my">My</string>
    <string name="rp">Rp</string>
    <string name="transfer_saldo_ke">Transfer saldo ke</string>
    <string name="cancel">Cancel</string>
    <string name="min_rp5_000">Min Rp5.000</string>
    <string name="pay">Pay</string>
    <string name="total_order_rp">Total Order : </string>
    <string name="apply">APPLY</string>
    <string name="voucher">Voucher</string>
    <string name="ini_jumlah_saldo_akun">ini jumlah saldo akun</string>
    <string name="discount">Discount</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="order_amount">Order Amount</string>
    <string name="order_summary">Order Summary</string>
    <string name="your_orders">Your Orders</string>
    <string name="enter_your_top_up_amount">Enter your top up amount</string>
    <string name="your_balance">your balance</string>
    <string name="top_up1">Top up</string>
    <string name="top_up_your_balance_here">Top up your balance here!</string>
    <string name="top_up">Top Up</string>
    <string name="amount">amount</string>
    <string name="transfer_your_balance_to_a_friend_here">Transfer your balance to a friend here!</string>
    <string name="fill_out_the_recipient_s_info_below">Fill out the recipient\'s info below!</string>
    <string name="balance_amount">Balance amount</string>
    <string name="transfer_balance">Transfer Balance</string>
    <string name="profil">Profil</string>
    <string name="e">e</string>
    <string name="name">Name</string>
    <string name="no_ktm_nik">No. KTM / NIK</string>
    <string name="logout">LOGOUT</string>
    <string name="your_username">Your username</string>
    <string name="sign">Sign</string>
    <string name="up2">Up</string>
    <string name="no_discount">No discount</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="see_your_qr_code">See your QR Code</string>
    <string name="send_your_balance">Send your Balance</string>
    <string name="see_available_promos">See Available Promos</string>
    <string name="transfer_balance2">Transfer Balance</string>
    <string name="scan_qr_code_to_transfer_your_balance_to_a_friend">Scan Your Friend\'s QR Code!</string>
    <string name="or_scan_your_friend_s_qr_code_here">Or Scan your Friend\'s QR Code Here!</string>
    <string name="or">Or</string>
    <string name="insert_your_friend_s_username_here">Insert your Friend\'s Username Here!</string>
    <string name="using_username">Send Balance by Using Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>