<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utama.TransaksiPesanan"
    android:background="@drawable/tampilan_semua">

    <LinearLayout
        android:id="@+id/paycanteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="30dp">

        <ImageView
            android:id="@+id/panah_transaksi"
            android:layout_width="30dp"
            android:layout_height="34dp"
            android:src="@drawable/panah_back"
            android:layout_gravity="center_vertical">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_for_canteen"
            android:textColor="@color/putih"
            android:fontFamily="@font/poppins_semi"
            android:textSize="20sp"
            android:layout_marginStart="30dp">

        </TextView>

    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/order"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/your_orders"-->
<!--        android:fontFamily="@font/poppins_medium"-->
<!--        android:textSize="20sp"-->
<!--        android:textColor="@color/hitam"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="120dp"-->
<!--        android:layout_gravity="center_vertical">-->

<!--    </TextView>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/listmakanan"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/paycanteen"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="22dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/list_menu">

            </include>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/tengah1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_below="@id/listmakanan"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

<!--        <TextView-->
<!--            android:id="@+id/isipesanan"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="60dp"/>-->

        <RelativeLayout
            android:id="@+id/relativeoren"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/tombol_oren">

            <TextView
                android:id="@+id/test_kode_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:hint="@string/voucher"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/hitam"
                android:fontFamily="@font/poppins_semi">

            </TextView>

            <TextView
                android:id="@+id/apply_voucher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_semi"
                android:layout_alignParentEnd="true"
                android:textColor="@color/putih"
                android:layout_marginEnd="30dp">

            </TextView>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semi"
            android:textColor="@color/hitam">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_amount"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/hitam">
            </TextView>

            <TextView
                android:id="@+id/hasil_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:textAlignment="textEnd"
                android:textColor="@color/hitam"
                android:fontFamily="@font/poppins_medium"
                android:gravity="end">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_percentage"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/hitam">
            </TextView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/test_persentase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/no_discount"
                    android:textAlignment="textEnd"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/abu2"
                    android:fontFamily="@font/poppins_medium">
                </TextView>

                <TextView
                    android:id="@+id/persen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="%"
                    android:fontFamily="@font/poppins_medium"
                    android:textColorHint="@color/hitam"
                    android:layout_toEndOf="@id/test_persentase"
                    android:layout_marginStart="0dp">
                </TextView>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/hitam">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/jumlahPromo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/no_discount"
                    android:textColorHint="@color/abu2"
                    android:fontFamily="@font/poppins_medium"
                    android:textAlignment="textEnd"
                    android:textColor="@color/hitam"
                    android:layout_toEndOf="@id/kurang">
                </TextView>

                <TextView
                    android:id="@+id/kurang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/poppins_medium">
                </TextView>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/saldo_anda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ini_jumlah_saldo_akun"
            android:textSize="0sp">
        </TextView>

        <TextView
            android:id="@+id/cheat_hasilScan"
            android:layout_width="wrap_content"
            android:textSize="0sp"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/cheat_hasilPromo"
            android:layout_width="wrap_content"
            android:textSize="0sp"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/cheat_totalPembeli"
            android:layout_width="wrap_content"
            android:textSize="0sp"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/cheat_tanpaPromo"
            android:layout_width="wrap_content"
            android:textSize="0sp"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/bawah"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tengah1"
        android:background="@drawable/shape_lurus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/total_order_rp"
                android:textColor="@color/hitam"
                android:textSize="16sp">
            </TextView>

            <TextView
                android:id="@+id/totalPembeli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi"
                android:textColor="@color/hitam"
                android:textSize="16sp"
                android:layout_marginStart="4dp">
            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/btn_pay_pesanan"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/tombol_birudongker"
            android:fontFamily="@font/poppins_semi"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp">

        </Button>

    </RelativeLayout>

</RelativeLayout>