<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utama.TransferSaldoScan"
    android:background="@drawable/tampilan_semua">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp">

        <ImageView
            android:id="@+id/panah_tfscan"
            android:layout_width="35dp"
            android:layout_height="34dp"
            android:src="@drawable/panah_back"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transfer Balance"
            android:textColor="@color/putih"
            android:fontFamily="@font/poppins_semi"
            android:textSize="20sp"
            android:layout_marginStart="30dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tulisan"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_money_transfer"
            android:layout_gravity="center_vertical">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transfer your money to a friend here!"
            android:textColor="@color/hitam"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:layout_gravity="center_vertical">
        </TextView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tulisan_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/tombol_birudongker3"
        android:padding="6dp"
        android:layout_below="@id/tulisan"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/tulisan11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/putih"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:text="@string/transfer_saldo_ke">
            </TextView>

            <TextView
                android:id="@+id/txtuname_transferqr"
                android:layout_width="match_parent"
                android:textColor="@color/putih"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:hint="@string/username"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_below="@id/tulisan11">

            <me.abhinay.input.CurrencyEditText
                android:id="@+id/edit_amount_payqr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/min_rp5_000"
                android:textColorHint="@color/putih"
                android:inputType="number"
                android:textColor="@color/putih"
                android:fontFamily="@font/poppins_medium"
                android:backgroundTint="@color/putih"
                android:maxLines="1">
            </me.abhinay.input.CurrencyEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/btn_cancel_tfscan"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:text="@string/cancel"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/hitam"
                    android:textAllCaps="false"
                    android:background="@drawable/tombol_putih">
                </Button>

                <Button
                    android:id="@+id/btn_transfer_saldo_payqr"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:text="@string/send"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/putih"
                    android:textAllCaps="false"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/tombol_oren">
                </Button>

            </LinearLayout>

            <TextView
                android:id="@+id/saldocontoh_payqr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="0sp">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>